log
Thu Apr 21 15:22:24 -04 2022: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
Compilation failed
0af1922
Thu Apr 21 15:25:48 -04 2022: 
 tests:  4|7
total_score: 5/70
4b523d7
Thu Apr 21 15:39:21 -04 2022: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
4f6e8df
Thu Apr 21 15:43:30 -04 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2511e08
Thu Apr 21 15:43:55 -04 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
502870a
Thu Apr 21 15:45:06 -04 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
6105fc9
Thu Apr 21 15:51:07 -04 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
289c5f0
Thu Apr 21 16:06:13 -04 2022: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  0|0
df82151
Thu Apr 21 16:06:47 -04 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
b376e8d
Thu Apr 21 16:12:52 -04 2022: 
 treemap.c | 19 ++++++++++++-------
 1 file changed, 12 insertions(+), 7 deletions(-)
 tests:  0|0
35b4440
Thu Apr 21 16:19:55 -04 2022: 
 treemap.c | 26 +++++++++++++-------------
 1 file changed, 13 insertions(+), 13 deletions(-)
 tests:  10|6
total_score: 15/70
608ebbf
Thu Apr 21 16:23:57 -04 2022: 
 treemap.c | 19 ++++++++++++-------
 1 file changed, 12 insertions(+), 7 deletions(-)
 tests:  12|6
total_score: 15/70
8d4dfaf
Thu Apr 21 16:25:25 -04 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
6cb6e13
Thu Apr 21 16:31:28 -04 2022: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
70b1227
Thu Apr 21 16:41:22 -04 2022: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
8bf235b
Thu Apr 21 16:49:27 -04 2022: 
 treemap.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
In file included from test.c:4:
./treemap.c:109:18: error: using the result of an assignment as a condition without parentheses [-Werror,-Wparentheses]
        if (node = node->parent->left)
            ~~~~~^~~~~~~~~~~~~~~~~~~~
./treemap.c:109:18: note: place parentheses around the assignment to silence this warning
        if (node = node->parent->left)
                 ^
            (                        )
./treemap.c:109:18: note: use '==' to turn this assignment into an equality comparison
        if (node = node->parent->left)
                 ^
                 ==
./treemap.c:114:18: error: using the result of an assignment as a condition without parentheses [-Werror,-Wparentheses]
        if (node = node->parent->right)
            ~~~~~^~~~~~~~~~~~~~~~~~~~~
./treemap.c:114:18: note: place parentheses around the assignment to silence this warning
        if (node = node->parent->right)
                 ^
            (                         )
./treemap.c:114:18: note: use '==' to turn this assignment into an equality comparison
        if (node = node->parent->right)
                 ^
                 ==
./treemap.c:123:18: error: using the result of an assignment as a condition without parentheses [-Werror,-Wparentheses]
        if (node = node->parent->left)
            ~~~~~^~~~~~~~~~~~~~~~~~~~
./treemap.c:123:18: note: place parentheses around the assignment to silence this warning
        if (node = node->parent->left)
                 ^
            (                        )
./treemap.c:123:18: note: use '==' to turn this assignment into an equality comparison
        if (node = node->parent->left)
                 ^
                 ==
./treemap.c:128:18: error: using the result of an assignment as a condition without parentheses [-Werror,-Wparentheses]
        if (node = node->parent->right)
            ~~~~~^~~~~~~~~~~~~~~~~~~~~
./treemap.c:128:18: note: place parentheses around the assignment to silence this warning
        if (node = node->parent->right)
                 ^
            (                         )
./treemap.c:128:18: note: use '==' to turn this assignment into an equality comparison
        if (node = node->parent->right)
                 ^
                 ==
./treemap.c:137:18: error: using the result of an assignment as a condition without parentheses [-Werror,-Wparentheses]
        if (node = node->parent->left)
            ~~~~~^~~~~~~~~~~~~~~~~~~~
./treemap.c:137:18: note: place parentheses around the assignment to silence this warning
        if (node = node->parent->left)
                 ^
            (                        )
./treemap.c:137:18: note: use '==' to turn this assignment into an equality comparison
        if (node = node->parent->left)
                 ^
                 ==
./treemap.c:142:18: error: using the result of an assignment as a condition without parentheses [-Werror,-Wparentheses]
        if (node = node->parent->right)
            ~~~~~^~~~~~~~~~~~~~~~~~~~~
./treemap.c:142:18: note: place parentheses around the assignment to silence this warning
        if (node = node->parent->right)
                 ^
            (                         )
./treemap.c:142:18: note: use '==' to turn this assignment into an equality comparison
        if (node = node->parent->right)
                 ^
                 ==
6 errors generated.
Compilation failed
4f56f3c
Thu Apr 21 16:50:41 -04 2022: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  16|4
total_score: 30/70
0aed6c2
Thu Apr 21 16:59:52 -04 2022: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
9e35117
Thu Apr 21 17:05:43 -04 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  16|4
total_score: 30/70
af0fb7e
